signed reolution endpoint decoding resolution
