# src/openapi/openapi.yaml
@@ -330,30 +330,30 @@ components:
     transaction_object:
         type: object
         properties:
-        transactionHash:
-          type: string
-        transactionIndex:
-          type: string,
-        blockHash:
-          type: string,
-        contractAddress:
-          type: string,
-        cumulativeGasUsed:
-          type: integer,
-        to:
-          type: string
-        from:
-          type: string
-        gasUsed:
-          type: integer
-        logsBloom:
-          type: string
-        logs:
-          type: array
-        confirmation:
-          type: integer
-        status:
-          type: integer     
+          transactionHash:
+            type: string
+          transactionIndex:
+            type: string
+          blockHash:
+            type: string
+          contractAddress:
+            type: string
+          cumulativeGasUsed:
+            type: integer
+          to:
+            type: string
+          from:
+            type: string
+          gasUsed:
+            type: integer
+          logsBloom:
+            type: string
+          logs:
+            type: array
+          confirmation:
+            type: integer
+          status:
+            type: integer     
     signed_transaction:
       type: object
       properties:
@@ -520,20 +520,10 @@ components:
     signed_resolution:
       type: object
       properties:
-        proofType:
+        proof:
           type: string
-        type:
-          type: string
-        resolution:
-          type: string
-        dataExchangeId:
-          type: string
-        iat:
-          type: integer
-        iss:
-          type: string
-        sub:
-          type: string
+      example:
+        proof: 'eyJhbGciOiJFUzI1NiJ9.eyJwcm9vZlR5cGUiOiJyZXNvbHV0aW9uIiwiZGF0YUV4Y2hhbmdlSWQiOiJTTmg5eUtYYjJlaGxWSFJZQkllay16Z1pVaDJtU1NvMWpwbGg3SWEtNHlRIiwiaWF0IjoxNjQ2OTUxNjM1LCJpc3MiOiJ7XCJhbGdcIjpcIkVTMjU2XCIsXCJjcnZcIjpcIlAtMjU2XCIsXCJkXCI6XCJ1Z1NpSTlJTEdnTWM1TmMwbkFhM3FGTjNBTjBvR2JhMzNJQWFrSHFkdm1nXCIsXCJrdHlcIjpcIkVDXCIsXCJ4XCI6XCJMNldmVlhHYkgwaW82SnBtOTRTMWxwZGk2eUd0VDFPbVo2NUFfa1NfaGs4XCIsXCJ5XCI6XCI2WUUwb1BPcFdCcUM3NURfanRKVWZ5NWxzWGxHak81ZzZRWGl2RHdNREtjXCJ9Iiwic3ViIjoie1wiYWxnXCI6XCJFUzI1NlwiLFwiY3J2XCI6XCJQLTI1NlwiLFwia3R5XCI6XCJFQ1wiLFwieFwiOlwiVlhzQnVPWndWamhvZkpWNGtBaGJhNnduMUVZRHdVSWtnWGIyZlZuTDh4Y1wiLFwieVwiOlwiaDRmTDVRdjRFWXQ3WGRLcWRJeTFaSnM0X1FXWURrWTF6VXpTb0k2MU43WVwifSIsInJlc29sdXRpb24iOiJkZW5pZWQiLCJ0eXBlIjoiZGlzcHV0ZSJ9.TtxUm3E6LfmwEI74cr6RO4-nw-xcFaeARYOZ4z1dBVlc_JU0mCv0Ftr9tCDhggfLiJqb4RIPiNfIytFZMUbx-g'
     active_agreements:
       type: array
       items:
